# auto-aiming

./: .gitignore  README.md  aim_on_boot.sh  run
.github/workflows/: colcon-tests.yml
install/: local_setup.sh  setup.sh
install/control_communicator/lib/control_communicator/: ControlCommunicatorNode
install/control_communicator/share/control_communicator/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mv_publisher/lib/mv_publisher/: MVCameraNode
install/mv_publisher/share/mv_publisher/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/opencv_armor_detector/lib/opencv_armor_detector/: OpenCVArmorDetectorNode
install/opencv_armor_detector/share/opencv_armor_detector/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/pose_estimator/lib/pose_estimator/: PoseEstimatorNode
install/pose_estimator/share/pose_estimator/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/prm_launch/share/prm_launch/: local_setup.bash  local_setup.dsv  (+8 more)
log/: latest_build
src/prm_autobot_2023/: CMakeLists.txt  frames.gv  nav.py  package.xml
src/prm_autobot_2023/Camera/Data/: 043041420089.mvdat
src/prm_autobot_2023/launch/: autobot_launch.py  autobot_mapper_launch.py  autobot_simulation_launch.py  bringup_launch.py  lidar_control_launch.py  localization_launch.py  multi_tb3_simulation_launch.py  navigation_launch.py  rplidar_range_limit_launch.py  rviz_launch.py  slam_launch.py
src/prm_autobot_2023/maps/: Klondike.pgm  Klondike.yaml  arena.pgm  arena.yaml  basement.pgm  basement.yaml  old_comp.pgm  old_comp.yaml
src/prm_autobot_2023/old_maps/: Robomaster_Arena.pgm  Robomaster_Arena.yaml
src/prm_autobot_2023/params/: nav2_params.yaml
src/prm_autobot_2023/scripts/: subscriber.py
src/prm_autobot_2023/src/: ScanLimitNode.cpp
src/prm_autobot_2023/urdf/: frames.gv  robot_rm.urdf
src/prm_autobot_2023/worlds/: PRM_world.model
src/prm_camera/: .gitignore  README.md
src/prm_camera/mv_publisher/: CMakeLists.txt  package.xml
src/prm_camera/mv_publisher/config/: mv_133_4_info.yaml
src/prm_camera/mv_publisher/include/: MVCameraNode.hpp  time_debug.h
src/prm_camera/mv_publisher/sdk/demo/OpenCv/: CMakeLists.txt  main.cpp
src/prm_camera/mv_publisher/src/: MVCameraNode.cpp
src/prm_camera/recorder_cv/: CMakeLists.txt
src/prm_camera/recorder_cv/launch/: mv2image.py  mv_recorder.py  old_mv2image.py  webcam_recorder.py
src/prm_camera/recorder_cv/src/: VideoRecorderNode.cpp  recorder.hpp
src/prm_camera/webcam_publisher/: CMakeLists.txt  package.xml
src/prm_camera/webcam_publisher/config/: webcam_info.yaml
src/prm_camera/webcam_publisher/include/: VideoCaptureNode.hpp
src/prm_camera/webcam_publisher/launch/: video.py  webcam.py
src/prm_camera/webcam_publisher/src/: VideoCaptureImageNode.cpp  VideoCaptureNode.cpp
src/prm_control/control_communicator/: CMakeLists.txt  package.xml  pitch_lookup_table.txt
src/prm_control/control_communicator/include/: ControlCommunicator.h  ControlCommunicator.hpp  ControlCommunicatorNode.hpp  PitchLookupModel.hpp  messages.h  messages.hpp  projectile_angle_convel.h  projectile_angle_convel.hpp  time_debug.h  time_debug.hpp  utils.hpp
src/prm_control/control_communicator/include/lookup_tables/: pitch_lookup_table.txt
src/prm_control/control_communicator/src/: ControlCommunicator.cpp  ControlCommunicatorNode.cpp  PitchLookupModel.cpp  a.out  utils.cpp
src/prm_control/control_communicator/test/: test_ControlCommunicator.cpp
src/prm_launch/: CMakeLists.txt  README.md
src/prm_launch/config/: mv_red_bidc.yaml  opencv_armor_detector_red_bidc.yaml
src/prm_launch/launch/: mv2control.py  mv2detector.py  video2detector.py
src/prm_vision/opencv_armor_detector/: CMakeLists.txt
src/prm_vision/opencv_armor_detector/include/: BallisticSolver.hpp  OpenCVArmorDetector.h  OpenCVArmorDetectorNode.hpp  PoseEstimator.h  TargetKalmanFilter.hpp
src/prm_vision/opencv_armor_detector/src/: BallisticSolver.cpp  OpenCVArmorDetector.cpp  OpenCVArmorDetector.cpp.save  OpenCVArmorDetector.cpp.save.2  OpenCVArmorDetectorNode.cpp  PoseEstimator.cpp  TargetKalmanFilter.cpp  temp.txt
src/prm_vision/opencv_armor_detector/test/: test_OpenCVArmorDetector.cpp  test_opencv_armor_detector.cpp
src/prm_vision/opencv_armor_detector/test/resources/blue/: ground_truth.csv
src/prm_vision/opencv_armor_detector/test/resources/close/: ground_truth.csv
src/prm_vision/opencv_armor_detector/test/resources/easy/: ground_truth.csv
src/prm_vision/opencv_armor_detector/test/resources/far_back/: ground_truth.csv
src/prm_vision/opencv_armor_detector/test/resources/far_back_spin_and_move/: ground_truth.csv
src/prm_vision/pnp_solver/: CMakeLists.txt  package.xml
src/prm_vision/pnp_solver/include/: KalmanFilter.hpp  PNPSolver.hpp  PNPSolverNode.hpp  PitchLookupModel.hpp  ValidityFilter.hpp  projectile_angle_convel.hpp
src/prm_vision/pnp_solver/src/: KalmanFilter.cpp  PNPSolver.cpp  PNPSolverNode.cpp  PitchLookupModel.cpp  ValidityFilter.cpp  projectile_angle_convel.cpp
src/prm_vision/pnp_solver/test/: test_PNPSolver.cpp
src/prm_vision/pnp_solver/test/spinning_in_place/: ground_truth.csv  test_PNPSolver.cpp
src/prm_vision/pose_estimator/: CMakeLists.txt  package.xml
src/prm_vision/pose_estimator/include/: AntiSpintop.hpp  PoseEstimator.h  PoseEstimatorNode.hpp  ValidityFilter.hpp
src/prm_vision/pose_estimator/src/: AntiSpintop.cpp  PoseEstimator.cpp  PoseEstimatorNode.cpp  ValidityFilter.cpp
src/prm_vision/pose_estimator/test/: test_PoseEstimator.cpp  test_ValidityFilter.cpp
src/prm_vision/vision_msgs/: CMakeLists.txt  package.xml
src/prm_vision/vision_msgs/msg/: KeyPointGroups.msg  KeyPoints.msg  PredictedArmor.msg  YawPitch.msg
(+239 files in other folders)
