<?xml version="1.0"?>
<package format="3">
  <name>pnp_solver</name>
  <version>0.0.1</version>
  <description>Module written for Purdue Robomaster to calculate 3D armor position of RoboMaster Robots.</description>
  
  <maintainer email="tkodonne@purdue.edu">Tom O'Donnell</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>rclcpp</depend>
  <depend>cv_bridge</depend>
  <depend>vision_msgs</depend>
  
  <!-- GTest dependency -->
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
